--- a/.github/workflows/maven-build-and-test.yml
+++ b/.github/workflows/maven-build-and-test.yml
@@ -104,3 +104,16 @@ jobs:
         with: 
           settings-path: ./TransformAndStore/
           access-token: ${{ secrets.PACKAGE_PAT }}
+  
+  serilization-error-catch-build-and-test:
+    name: "Serilization Error Catch - Build and Test"
+    runs-on: ubuntu-latest
+    steps: 
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      
+      - name: Serilization Error Catch - Build and Test
+        uses: ./.github/actions/maven-build-and-test
+        with: 
+          settings-path: ./SerilizationErrorCatch/
+          access-token: ${{ secrets.PACKAGE_PAT }}
