--- a/.github/workflows/component-test.yml
+++ b/.github/workflows/component-test.yml
@@ -214,8 +214,8 @@ jobs:
           access-token: ${{ secrets.PACKAGE_PAT }}
           initial-kafka-topics: "TransfromAndStoreInputTopic"
 
-  serilization-error-catch-component-test:
-    name: "Serilization Error Catch component test"
+  serialization-error-catch-component-test:
+    name: "Serialization Error Catch component test"
     needs: should-run
     runs-on: ubuntu-latest
     if: ${{ needs.should-run.outputs.event-name-check == 'true' || needs.should-run.outputs.tag-check == 'true' }}
@@ -223,9 +223,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Build Serilization Error Catch example image and run component test
+      - name: Build Serialization Error Catch example image and run component test
         uses: ./.github/actions/component-test
         with:
-          context-path: ./SerilizationErrorCatch/
+          context-path: ./SerializationErrorCatch/
           access-token: ${{ secrets.PACKAGE_PAT }}
           initial-kafka-topics: "SerializationErrorCatchInputTopic"
