--- a/ExternalLookup/docker-compose.yaml
+++ b/ExternalLookup/docker-compose.yaml
@@ -40,6 +40,10 @@ services:
       KAFKA_CLIENT_ID: ClientId
       KAFKA_CLIENT_SECRET: 1234
       KAFKA_TOKEN_URL: http://cheetahoauthsimulator/oauth2/token
+      SERVICE_TOKEN_URL: http://cheetahoauthsimulator/oauth2/token
+      SERVICE_CLIENT_ID: testId
+      SERVICE_CLIENT_SECRET: testSecret
+      SERVICE_SCOPE: testScope
       FLINK_PROPERTIES: |
         jobmanager.rpc.address: externallookup-job
         scheduler-mode: reactive
@@ -71,10 +75,6 @@ services:
         - GITHUB_ACTOR
     command: taskmanager
     environment:
-      SERVICE_TOKEN_ENDPOINT: "http://cheetahoauthsimulator/oauth2/token"
-      SERVICE_CLIENT_ID: "testId"
-      SERVICE_CLIENT_SECRET: "testSecret"
-      SERVICE_SCOPE: "testScope"
       FLINK_PROPERTIES: |
         jobmanager.rpc.address: externallookup-job
         taskmanager.memory.process.size: 4gb
