fixed a workflow job for component test, made development infrastructure run 'core' profile, and made component test action not build image before running docker compose

--- a/.github/actions/component-test/action.yml
+++ b/.github/actions/component-test/action.yml
@@ -29,18 +29,10 @@ runs:
         token: ${{ inputs.access-token }}
         path: development-infrastructure
 
-    - name: "Build images"
-      working-directory: ${{ inputs.context-path }}
-      shell: bash
-      run: docker compose build --quiet
-      env:
-        GITHUB_ACTOR: ${{ github.actor }}
-        GITHUB_TOKEN: ${{ inputs.access-token }}
-
     - name: "Start development infrastructure"
       working-directory: development-infrastructure/
       shell: bash
-      run: docker compose --profile kafka --profile oauth --profile opensearch up -d --build --quiet-pull
+      run: docker compose --profile core up -d --build --quiet-pull
       env:
         INITIAL_KAFKA_TOPICS: ${{ inputs.initial-kafka-topics }}
         DOCKER_REGISTRY: ghcr.io/trifork/
