--- a/.github/workflows/component-test.yml
+++ b/.github/workflows/component-test.yml
@@ -216,6 +216,7 @@ jobs:
 
       - name: Build Transfrom And Store example image and run component test
         uses: ./.github/actions/component-test
+        if: ${{ steps.changed-files.outputs.any_changed == 'true' }}
         with:
           context-path: ./TransformAndStore/
           access-token: ${{ secrets.PACKAGE_PAT }}
