--- a/Observability/pom.xml
+++ b/Observability/pom.xml
@@ -78,7 +78,7 @@ under the License.
         <dependency>
             <groupId>com.trifork.cheetah.processing</groupId>
             <artifactId>cheetah-lib-processing</artifactId>
-            <version>3.7.0-feature-metrics-SNAPSHOT</version>
+            <version>3.7.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
