--- a/ExternalLookup/src/main/resources/log4j2.properties
+++ b/ExternalLookup/src/main/resources/log4j2.properties
@@ -5,4 +5,4 @@ rootLogger.appenderRef.console.ref = ConsoleAppender
 appender.console.name = ConsoleAppender
 appender.console.type = CONSOLE
 appender.console.layout.type = PatternLayout
-appender.console.layout.pattern = [%-5level] %d{yyyy-MM-dd HH:mm:ss,SSS} %-5p %-60c %x - %m%n
+appender.console.layout.pattern = %d{yyyy-MM-dd HH:mm:ss,SSS} [%-5level] %-60c %x - %m%n
