--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -2,7 +2,7 @@ version: 2
 registries:
   nuget: # Define access for a private registry
     type: nuget
-    url: https://nuget.pkg.github.com/trifork
+    url: https://nuget.pkg.github.com/trifork/v3/index.json
     username: cheetahbot
     password: ${{secrets.CHEETAH_READ_TOKEN}}
   maven:
