--- a/renovate.json5
+++ b/renovate.json5
@@ -1,6 +1,6 @@
 {
     "extends": [
-        "github>trifork/cheetah-infrastructure-utils-workflows:default.json5"
+        "github>trifork/cheetah-infrastructure-utils-workflows:default.json5",
         "github>trifork/cheetah-infrastructure-utils-workflows:ignorePrivate.json5"
     ]
 }
