--- a/.github/workflows/component-test.yml
+++ b/.github/workflows/component-test.yml
@@ -1,31 +1,26 @@
-name: Component tests of all examples in Cheetah Platform Examples 
-on:
-  workflow_dispatch:
-  
-  push:
-    branches: ["main"]
+name: Component Test 
 
-  pull_request:
-    branches: ["main"]
-    types:
-      - labeled
-      - opened
-      - edited
-      - ready_for_review
-      - auto_merge_enabled
-      - synchronize
-      - reopened
-      
+on:
+  workflow_call:
+  workflow_dispatch:
   schedule:
-  # * is a special character in YAML so you have to quote this string
-  - cron: '30 0 * * *'
+    - cron: "0 3 * * *"
+  push:
+    branches: [ 'main', 'release/v**' ]
+  pull_request:
+    branches: [ 'main', 'release/v**' ]
+    types: [ opened, synchronize, reopened, labeled ]
+
+concurrency:
+  group: ${{ github.ref }}-${{ github.workflow }}
+  cancel-in-progress: true
 
 jobs:
-  should-run: # seperate step to support ci/cd status checks
+  should-run:
     uses: trifork/cheetah-infrastructure-utils-workflows/.github/workflows/e2e-should-run.yml@main
 
   flink-state-component-test:
-    name: "Flink States example component test"
+    name: Flink States
     needs: should-run
     runs-on: ubuntu-latest
     if: ${{ needs.should-run.outputs.should-run }}
@@ -54,7 +49,7 @@ jobs:
           initial-kafka-topics: "MergeTwoStreamsInputTopicA MergeTwoStreamsInputTopicB"
 
   merge-two-streams-component-test:
-    name: "Merge Two Streams example component test"
+    name: Merge Two Streams
     needs: should-run
     if: ${{ needs.should-run.outputs.should-run }}
     runs-on: ubuntu-latest
@@ -83,7 +78,7 @@ jobs:
           initial-kafka-topics: "MergeTwoStreamsInputTopicA MergeTwoStreamsInputTopicB"
 
   multiple-sideoutput-component-test:
-    name: "Multiple Side Output component test"
+    name: Multiple Side Outputs
     needs: should-run
     if: ${{ needs.should-run.outputs.should-run }}
     runs-on: ubuntu-latest
@@ -112,7 +107,7 @@ jobs:
           initial-kafka-topics: "MultipleSideOutputExampleInputTopic"
 
   observability-component-test:
-    name: "Observability component test"
+    name: Observability
     needs: should-run
     if: ${{ needs.should-run.outputs.should-run }}
     runs-on: ubuntu-latest
@@ -141,7 +136,7 @@ jobs:
           initial-kafka-topics: "ObservabilityInputTopic"
   
   tumbling-window-component-test:
-    name: "Tumbling Window component test"
+    name: Tumbling Window
     needs: should-run
     if: ${{ needs.should-run.outputs.should-run }}
     runs-on: ubuntu-latest
@@ -170,7 +165,7 @@ jobs:
           initial-kafka-topics: "TumblingWindowInputTopic"
 
   external-lookup-component-test:
-    name: "External Lookup component test"
+    name: External Lookup
     needs: should-run
     runs-on: ubuntu-latest
     if: ${{ needs.should-run.outputs.should-run }}
@@ -199,7 +194,7 @@ jobs:
           initial-kafka-topics: "ExternalLookupInputTopic"
 
   transform-and-store-component-test:
-    name: "Transform And Store component test"
+    name: Transform and Store
     needs: should-run
     runs-on: ubuntu-latest
     if: ${{ needs.should-run.outputs.should-run }}
@@ -228,7 +223,7 @@ jobs:
           initial-kafka-topics: "TransfromAndStoreInputTopic"
 
   serialization-error-catch-component-test:
-    name: "Serialization Error Catch component test"
+    name: Serialization Error Catch
     needs: should-run
     runs-on: ubuntu-latest
     if: ${{ needs.should-run.outputs.should-run }}
