--- a/renovate.json5
+++ b/renovate.json5
@@ -1,5 +1,10 @@
 {
     "extends": [
         "github>trifork/cheetah-infrastructure-utils-workflows:default.json5"
+    ],
+    "packageRules": [
+        "schedule": [
+            "at any time"
+        ]
     ]
 }
