--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -14,5 +14,5 @@ jobs:
           token: ${{ secrets.PACKAGE_PAT }}
         env:
           RENOVATE_AUTODISCOVER: true
-          RENOVATE_AUTODISCOVER_FILTER: ".*cheetah-example-flink.*"
+          RENOVATE_AUTODISCOVER_FILTER: "trifork/cheetah-example-flink"
           LOG_LEVEL: 'debug'
