--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -17,9 +17,9 @@ jobs:
           RENOVATE_AUTODISCOVER_FILTER: "trifork/cheetah-example-flink"
           LOG_LEVEL: 'debug'
           RENOVATE_DETECT_HOST_RULES_FROM_ENV: true
-          NUGET_NUGET_PKG_GITHUB_COM_TRIFORK_USERNAME: "cheetahbot"
-          NUGET_NUGET_PKG_GITHUB_COM_TRIFORK_TOKEN: ${{ secrets.PACKAGE_PAT }}
-          NUGET_NUGET_PKG_GITHUB_COM_TRIFORK_PASSWORD: ${{ secrets.PACKAGE_PAT }}
+          NUGET_NUGET_PKG_GITHUB_COM_USERNAME: "cheetahbot"
+          NUGET_NUGET_PKG_GITHUB_COM_TOKEN: "${{ secrets.PACKAGE_PAT }}"
+          NUGET_NUGET_PKG_GITHUB_COM_PASSWORD: "${{ secrets.PACKAGE_PAT }}"
 
           MAVEN_MAVEN_PKG_GITHUB_COM_USERNAME: "cheetahbot"
           MAVEN_MAVEN_PKG_GITHUB_COM_TOKEN: ${{ secrets.PACKAGE_PAT }}
