--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -20,6 +20,9 @@ jobs:
           NUGET_NUGET_PKG_GITHUB_COM_USERNAME: "cheetahbot"
           NUGET_NUGET_PKG_GITHUB_COM_TOKEN: "${{ secrets.PACKAGE_PAT }}"
           NUGET_NUGET_PKG_GITHUB_COM_PASSWORD: "${{ secrets.PACKAGE_PAT }}"
+          NUGET_USERNAME: "cheetahbot"
+          NUGET_PASSWORD: ${{ secrets.PACKAGE_PAT }}
+          NUGET_TOKEN: ${{ secrets.PACKAGE_PAT }}
 
           MAVEN_MAVEN_PKG_GITHUB_COM_USERNAME: "cheetahbot"
           MAVEN_MAVEN_PKG_GITHUB_COM_TOKEN: ${{ secrets.PACKAGE_PAT }}
