--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -23,9 +23,9 @@ jobs:
           NUGET_NUGET_PKG_GITHUB_COM_TOKEN: ${{ secrets.RENOVATE_TOKEN }}
           NUGET_NUGET_PKG_GITHUB_COM_PASSWORD: ${{ secrets.RENOVATE_TOKEN }}
           
-          NUGET_USERNAME: cheetahbot
-          NUGET_PASSWORD: ${{ secrets.RENOVATE_TOKEN }}
-          NUGET_TOKEN: ${{ secrets.RENOVATE_TOKEN }}
+          RENOVATE_NUGET_USERNAME: cheetahbot
+          RENOVATE_NUGET_PASSWORD: ${{ secrets.RENOVATE_TOKEN }}
+          RENOVATE_NUGET_TOKEN: ${{ secrets.RENOVATE_TOKEN }}
 
           MAVEN_MAVEN_PKG_GITHUB_COM_USERNAME: cheetahbot
           MAVEN_MAVEN_PKG_GITHUB_COM_TOKEN: ${{ secrets.RENOVATE_TOKEN }}
