--- a/renovate.json5
+++ b/renovate.json5
@@ -11,23 +11,17 @@
     //-----------------------------------------------------------------------------------------//
     {
       "hostType": "docker",
-      "matchHost": "ghcr.io",
-      "username": "cheetahbot",
-      "token": "{{ secrets.RENOVATE_TOKEN }}"
+      "matchHost": "ghcr.io"
     },
     //For com.trifork.cheetah.processing:cheetah-lib-processing
     {
       "hostType": "maven",
-      "matchHost": "https://maven.pkg.github.com/trifork",
-      "username": "cheetahbot",
-      "token": "{{ secrets.RENOVATE_TOKEN }}"
+      "matchHost": "https://maven.pkg.github.com/trifork"
     },
     //For Cheetah.ComponentTest
     {
       "hostType": "nuget",
-      "matchHost": "https://nuget.pkg.github.com/trifork",
-      "username": "cheetahbot",
-      "token": "{{ secrets.RENOVATE_TOKEN }}"
+      "matchHost": "https://nuget.pkg.github.com/trifork"
     }
   ]
 }
