--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -13,7 +13,6 @@ jobs:
           configurationFile: renovate.json5
           token: ${{ secrets.RENOVATE_TOKEN }}
         env:
-          RENOVATE_TOKEN: ${{ secrets.RENOVATE_TOKEN }}
           RENOVATE_AUTODISCOVER: true
           RENOVATE_AUTODISCOVER_FILTER: "trifork/cheetah-example-flink"
           LOG_LEVEL: 'debug'
@@ -21,6 +20,10 @@ jobs:
           RENOVATE_NUGET_NUGET_PKG_GITHUB_COM_USERNAME: cheetahbot
           RENOVATE_NUGET_NUGET_PKG_GITHUB_COM_TOKEN: ${{ secrets.RENOVATE_TOKEN }}
           RENOVATE_NUGET_NUGET_PKG_GITHUB_COM_PASSWORD: ${{ secrets.RENOVATE_TOKEN }}
+
+          NUGET_PKG_GITHUB_COM_USERNAME: cheetahbot
+          NUGET_PKG_GITHUB_COM_TOKEN: ${{ secrets.RENOVATE_TOKEN }}
+          NUGET_PKG_GITHUB_COM_PASSWORD: ${{ secrets.RENOVATE_TOKEN }}
           
           RENOVATE_NUGET_USERNAME: cheetahbot
           RENOVATE_NUGET_PASSWORD: ${{ secrets.RENOVATE_TOKEN }}
@@ -35,4 +38,3 @@ jobs:
           MAVEN_TOKEN: ${{ secrets.RENOVATE_TOKEN }}
 
           RENOVATE_DETECT_HOST_RULES_FROM_ENV: true
-          RENOVATE_EXPOSE_ALL_ENV: true
