--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -17,7 +17,8 @@ jobs:
           RENOVATE_DETECT_HOST_RULES_FROM_ENV: true
           RENOVATE_AUTODISCOVER_FILTER: "trifork/cheetah-example-flink"
           LOG_LEVEL: 'debug'
-          
+
+          TOKEN: ${{ secrets.RENOVATE_TOKEN }}
           NUGET_PKG_USERNAME: cheetahbot
           NUGET_PKG_TOKEN: ${{ secrets.RENOVATE_TOKEN }}
           NUGET_PKG_PASSWORD: ${{ secrets.RENOVATE_TOKEN }}
