--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -13,9 +13,12 @@ jobs:
           configurationFile: renovate.json5
           token: ${{ secrets.RENOVATE_TOKEN }}
         env:
+          RENOVATE_DETECT_HOST_RULES_FROM_ENV: true
           RENOVATE_AUTODISCOVER: true
           RENOVATE_AUTODISCOVER_FILTER: "trifork/cheetah-example-flink"
           LOG_LEVEL: 'debug'
+
+          TOKEN: ${{ secrets.RENOVATE_TOKEN }}
 
           NUGET_PKG_USERNAME: cheetahbot
           NUGET_PKG_TOKEN: ${{ secrets.RENOVATE_TOKEN }}
@@ -37,5 +40,5 @@ jobs:
           MAVEN_PASSWORD: ${{ secrets.RENOVATE_TOKEN }}
           MAVEN_TOKEN: ${{ secrets.RENOVATE_TOKEN }}
 
-          RENOVATE_DETECT_HOST_RULES_FROM_ENV: true
+          
         
