--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -17,6 +17,9 @@ jobs:
           RENOVATE_AUTODISCOVER: true
           RENOVATE_AUTODISCOVER_FILTER: "trifork/cheetah-example-flink"
           LOG_LEVEL: 'debug'
+
+          RENOVATE_USERNAME: "cheetahbot"
+          RENOVATE_TOKEN: ${{ secrets.RENOVATE_TOKEN }}
           NUGET_PKG_TOKEN: ${{ secrets.RENOVATE_TOKEN }}
           NUGET_PKG_PASSWORD: ${{ secrets.RENOVATE_TOKEN }}
           MAVEN_PASSWORD: ${{ secrets.RENOVATE_TOKEN }}
