--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -17,8 +17,9 @@ jobs:
           RENOVATE_AUTODISCOVER: true
           RENOVATE_AUTODISCOVER_FILTER: "trifork/cheetah-example-flink"
           LOG_LEVEL: 'debug'
-          RENOVATE_NUGET_PKG_TOKEN: ${{ secrets.RENOVATE_TOKEN }}
-          RENOVATE_MAVEN_PKG_TOKEN: ${{ secrets.RENOVATE_TOKEN }}
+          NUGET_USERNAME: "cheetahbot"
+          NUGET_PASSWORD: ${{ secrets.RENOVATE_TOKEN }}
+          MAVEN_TOKEN: ${{ secrets.RENOVATE_TOKEN }}
 
           
         
