--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -21,9 +21,8 @@ jobs:
           NUGET_PASSWORD: ${{ secrets.RENOVATE_TOKEN }}
           MAVEN_TOKEN: ${{ secrets.RENOVATE_TOKEN }}
 
-          MAVEN_MAVEN_PKG_USERNAME: "cheetahbot"
-          MAVEN_MAVEN_PKG_TOKEN: ${{ secrets.RENOVATE_TOKEN }}
-          MAVEN_MAVEN PKG_USERNAME: ${{ secrets.RENOVATE_TOKEN }}
+          MAVEN_MAVEN_PKG_GITHUB_COM_USERNAME: "cheetahbot"
+          MAVEN_MAVEN_PKG_GITHUB_COM_TOKEN: ${{ secrets.RENOVATE_TOKEN }}
 
           
         
