--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -17,14 +17,14 @@ jobs:
           RENOVATE_AUTODISCOVER: true
           RENOVATE_AUTODISCOVER_FILTER: "trifork/cheetah-example-flink"
           LOG_LEVEL: 'debug'
-          NUGET_USERNAME: "cheetahbot"
-          NUGET_PASSWORD: ${{ secrets.RENOVATE_TOKEN }}
+          RENOVATE_NUGET_USERNAME: "cheetahbot"
+          RENOVATE_NUGET_PASSWORD: ${{ secrets.RENOVATE_TOKEN }}
 
-          MAVEN_MAVEN_PKG_GITHUB_COM_USERNAME: "cheetahbot"
-          MAVEN_MAVEN_PKG_GITHUB_COM_TOKEN: ${{ secrets.RENOVATE_TOKEN }}
+          RENOVATE_MAVEN_MAVEN_PKG_GITHUB_COM_USERNAME: "cheetahbot"
+          RENOVATE_MAVEN_MAVEN_PKG_GITHUB_COM_TOKEN: ${{ secrets.RENOVATE_TOKEN }}
 
-          USERNAME: "cheetahbot"
-          TOKEN: ${{ secrets.RENOVATE_TOKEN }}
+          RENOVATE_USERNAME: "cheetahbot"
+          RENOVATE_TOKEN: ${{ secrets.RENOVATE_TOKEN }}
 
           
         
