--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -23,7 +23,7 @@ jobs:
           RENOVATE_MAVEN_MAVEN_PKG_GITHUB_COM_USERNAME: "cheetahbot"
           RENOVATE_MAVEN_MAVEN_PKG_GITHUB_COM_TOKEN: ${{ secrets.RENOVATE_TOKEN }}
 
-          RENOVATE_USERNAME: "cheetahbot"
+          RENOVATE_USERNAME: "renovate-bot"
           RENOVATE_TOKEN: ${{ secrets.RENOVATE_TOKEN }}
 
           
