--- a/renovate.json5
+++ b/renovate.json5
@@ -5,7 +5,7 @@
     "schedule": [
         "at any time"
      ],
-    "platform": "github",
+    "platform": [ "github" ],
     "hostRules": [
     //For com.trifork.cheetah.processing:cheetah-lib-processing
     {
