--- a/renovate.json5
+++ b/renovate.json5
@@ -9,7 +9,7 @@
     //For com.trifork.cheetah.processing:cheetah-lib-processing
     {
       "hostType": "maven",
-      "matchHost": "https://maven.pkg.github.com/trifork"
+      "matchHost": "https://maven.pkg.github.com/trifork",
       "token": "{{ process.env.GITHUB_MAVEN_PKG_GITHUB_COM_TOKEN }}"
     },
     //For Cheetah.ComponentTest
