--- a/renovate.json5
+++ b/renovate.json5
@@ -1,21 +1,6 @@
 {
     "extends": [
-        "github>trifork/cheetah-infrastructure-utils-workflows:default.json5"
-    ],
-    "schedule": [
-        "at any time"
-     ],
-    "hostRules": [
-    //For com.trifork.cheetah.processing:cheetah-lib-processing
-    {
-      "hostType": "maven",
-      "matchHost": "https://maven.pkg.github.com/trifork",
-      "token": "{{ process.env.RENOVATE_TOKEN }}"
-    },
-    //For Cheetah.ComponentTest
-    {
-      "hostType": "nuget",
-      "matchHost": "https://nuget.pkg.github.com/trifork"
-    }
-  ]
+        "github>trifork/cheetah-infrastructure-utils-workflows:default.json5",
+        "github>trifork/cheetah-infrastructure-utils-workflows:ignorePrivate.json5"
+    ]
 }
