--- a/TransformAndStore/docker-compose.yaml
+++ b/TransformAndStore/docker-compose.yaml
@@ -10,13 +10,15 @@ services:
         - GITHUB_ACTOR
     environment:
       KAFKA__URL: kafka:19092
-      KAFKA__CLIENTID: ClientId
-      KAFKA__CLIENTSECRET: 1234
-      KAFKA__AUTHENDPOINT: http://cheetahoauthsimulator/oauth2/token
+      KAFKA__CLIENTID: default-access
+      KAFKA__CLIENTSECRET: default-access-secret
+      KAFKA__OAUTHSCOPE: opensearch kafka schema-registry
+      KAFKA__AUTHENDPOINT: http://keycloak:8080/realms/local-development/protocol/openid-connect/token
       OPENSEARCH__URL: http://opensearch:9200
-      OPENSEARCH__CLIENTID: ClientId
-      OPENSEARCH__CLIENTSECRET: 1234
-      OPENSEARCH__AUTHENDPOINT: http://cheetahoauthsimulator/oauth2/token
+      OPENSEARCH__CLIENTID: default-access
+      OPENSEARCH__CLIENTSECRET: default-access-secret
+      OPENSEARCH__OAUTHSCOPE: opensearch kafka schema-registry
+      OPENSEARCH__AUTHENDPOINT: http://keycloak:8080/realms/local-development/protocol/openid-connect/token
     depends_on:
       transformandstore-jobmanager:
         condition: service_healthy
@@ -42,12 +44,14 @@ services:
       --opensearch-security-protocol SASL_PLAINTEXT
       --index-base-name transformandstore-index_
     environment:
-      KAFKA_CLIENT_ID: ClientId
-      KAFKA_CLIENT_SECRET: 1234
-      KAFKA_TOKEN_URL: http://cheetahoauthsimulator/oauth2/token
-      OPENSEARCH_CLIENT_ID: ClientId
-      OPENSEARCH_CLIENT_SECRET: 1234
-      OPENSEARCH_TOKEN_URL: http://cheetahoauthsimulator/oauth2/token
+      KAFKA_CLIENT_ID: default-access
+      KAFKA_CLIENT_SECRET: default-access-secret
+      KAFKA_SCOPE: kafka schema-registry
+      KAFKA_TOKEN_URL: http://keycloak:8080/realms/local-development/protocol/openid-connect/token
+      OPENSEARCH_CLIENT_ID: default-access
+      OPENSEARCH_CLIENT_SECRET: default-access-secret
+      OPENSEARCH_SCOPE: opensearch
+      OPENSEARCH_TOKEN_URL: http://keycloak:8080/realms/local-development/protocol/openid-connect/token
       FLINK_PROPERTIES: |
         jobmanager.rpc.address: transformandstore-jobmanager
         scheduler-mode: reactive
