--- a/MultipleSideOutput/pom.xml
+++ b/MultipleSideOutput/pom.xml
@@ -30,8 +30,8 @@ under the License.
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <flink.version>1.16.1</flink.version>
-        <target.java.version>11</target.java.version>
+        <flink.version>1.18.0</flink.version>
+        <target.java.version>17</target.java.version>
         <scala.binary.version>2.12</scala.binary.version>
         <maven.compiler.source>${target.java.version}</maven.compiler.source>
         <maven.compiler.target>${target.java.version}</maven.compiler.target>
@@ -78,7 +78,7 @@ under the License.
         <dependency>
             <groupId>com.trifork.cheetah.processing</groupId>
             <artifactId>cheetah-lib-processing</artifactId>
-            <version>3.7.2</version>
+            <version>3.9.0-feature-upgrade-flink-1-18-0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
